--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ constantly==15.1.0
 cryptography==38.0.4
 daphne==3.0.2
 Django==4.0
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 gTTS==2.3.0
 hyperlink==21.0.0
